[gd_scene load_steps=17 format=2]

[ext_resource path="res://spells/Spell.tscn" type="PackedScene" id=1]
[ext_resource path="res://spells/BlastSpell.gd" type="Script" id=2]
[ext_resource path="res://assets/Particle_Tex.png" type="Texture" id=3]
[ext_resource path="res://enemies/Hurtbox.gd" type="Script" id=4]
[ext_resource path="res://spells/Reflector.gd" type="Script" id=5]
[ext_resource path="res://assets/placeholder_spell_menu_sprite_fear.png" type="Texture" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0296296, 1 )
colors = PoolColorArray( 0.556863, 0, 0.27451, 0.337255, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 64, 128, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 0.2
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.724638, 1 )
colors = PoolColorArray( 0.188235, 0, 0.611765, 0.313726, 0.945098, 0, 0, 1, 0.930484, 0, 0.984314, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.181 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2000.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.8
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 7 )
color = Color( 1, 1, 1, 0.00784314 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 256 )

[node name="BlastSpell" instance=ExtResource( 1 )]
script = ExtResource( 2 )
casting_time = 0.15
casting_cost = 0.15
recovery_time = 0.6
spell_name = "Blast"
active_time = 0.2
projectile_damage = 3.0
recoil = 1000.0
loose_casting = true
menu_tex = ExtResource( 6 )
chargable = true

[node name="CastingEffect" parent="." index="1"]
process_material = SubResource( 3 )

[node name="Attack" type="Node2D" parent="." index="3"]

[node name="ActiveParticles" type="Particles2D" parent="." index="4"]
emitting = false
amount = 600
lifetime = 0.2
preprocess = 0.1
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="GuideParticles" type="Particles2D" parent="." index="5"]
amount = 3000
lifetime = 0.2
preprocess = 0.1
process_material = SubResource( 9 )
texture = ExtResource( 3 )

[node name="Hurtbox" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox" index="0"]
polygon = PoolVector2Array( 0, 0, 256, -256, 384, 0, 256, 256 )

[node name="Reflector" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reflector" index="0"]
position = Vector2( 256, 0 )
shape = SubResource( 10 )
